--- a/Yeek/Components/App.razor
+++ b/Yeek/Components/App.razor
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
     <link rel="stylesheet" href="@Assets["app.css"]"/>
-    <link rel="stylesheet" href="@Assets["Yeek.styles.css"]"/>
     <ImportMap/>
-    <HeadOutlet @rendermode="InteractiveServer"/>
+    <HeadOutlet/>
 </head>
 
 <body>
-<Routes @rendermode="InteractiveServer"/>
-<script src="_framework/blazor.web.js"></script>
+<Routes/>
 </body>
 
 </html>
