hopefully last things before 1.0

--- a/Yeek/Components/Layout/MainLayout.razor
+++ b/Yeek/Components/Layout/MainLayout.razor
@@ -42,7 +42,7 @@
                 <a href="/privacy">Privacy Policy</a>
             </div>
             <div class="link">
-                <a href="/about-me">Attributions & Contact</a>
+                <a href="/about">About this Site</a>
             </div>
             <div class="link">
                 <a href="/faq">FAQ</a>
