--- a/Yeek/Components/Pages/About/FAQ.razor
+++ b/Yeek/Components/Pages/About/FAQ.razor
@@ -3,6 +3,25 @@
 
 <PageTitle>Yeek - FAQ</PageTitle>
 
+<h4>How do I get all the MIDIs?</h4>
+<p>
+    To get access to all the MIDIs, you can mount the entire archive as a "WebDAV" network share.<br/>
+    In Windows, you can do this by following these instructions:<br/>
+    <ul>
+        <li>Open explorer</li>
+        <li>Go to "This PC"</li>
+        <li>Right click the empty space</li>
+        <li>Click "Add Network Location"</li>
+        <li>Once the Network Location is open, click next on the Wizard</li>
+        <li>Select "Choose a custom network location"</li>
+        <li>As the address, type in <i>https://yeek.iterator.systems/webdav</i></li>
+        <li>Click next</li>
+        <li>Type in a name for the MIDI collection. This can be anything you want.</li>
+        <li>Hit next and click finish.</li>
+        <li>And you are done! You can now use the MIDIs however you like!</li>
+    </ul>
+</p>
+
 <h4>What are trust levels?</h4>
 <p>
     Trust levels are assigned to users based on their contributions. Currently, you are either: A normal user, a trusted user or a Moderator.<br/>
