--- a/Yeek/Components/Pages/About/About.razor
+++ b/Yeek/Components/Pages/About/About.razor
@@ -11,3 +11,6 @@ Yeek is a Project by Simyon.
     <li>@@simyon on Discord</li>
     <li><a href="https://steamcommunity.com/id/Simyon264/" target="_blank">Simyon on Steam</a></li>
 </ul>
+
+<h4>This project is open source!</h4>
+<a href="https://github.com/Simyon264/Yeek" target="_blank">View on GitHub</a>
