--- a/Yeek/Components/Pages/About/FAQ.razor
+++ b/Yeek/Components/Pages/About/FAQ.razor
@@ -22,6 +22,11 @@
     </ul>
 </p>
 
+<h4>Does this cost money?</h4>
+<p>
+    Nope. No ads either. Never.
+</p>
+
 <h4>What are trust levels?</h4>
 <p>
     Trust levels are assigned to users based on their contributions. Currently, you are either: A normal user, a trusted user or a Moderator.<br/>
