--- a/Yeek/Components/Pages/About/About.razor
+++ b/Yeek/Components/Pages/About/About.razor
@@ -3,6 +3,12 @@
 <h3>About</h3>
 <PageTitle>Yeek - About</PageTitle>
 
+<HeadContent>
+    <meta property="og:title" content="Yeek - About"/>
+    <meta property="og:description" content="Made by Simyon"/>
+    <meta property="og:type" content="website"/>
+</HeadContent>
+
 Yeek is a Project by Simyon.
 
 <h4>Contact me here:</h4>
