--- a/Yeek/Components/Pages/About/FAQ.razor
+++ b/Yeek/Components/Pages/About/FAQ.razor
@@ -3,6 +3,12 @@
 
 <PageTitle>Yeek - FAQ</PageTitle>
 
+<HeadContent>
+    <meta property="og:title" content="Yeek - FAQ"/>
+    <meta property="og:description" content="Frequently asked questions. Did you know you can mount the entire archive as a network share?"/>
+    <meta property="og:type" content="website"/>
+</HeadContent>
+
 <h4>How do I get all the MIDIs?</h4>
 <p>
     To get access to all the MIDIs, you can mount the entire archive as a "WebDAV" network share.<br/>
