--- a/Yeek/Components/Pages/About/Privacy.razor
+++ b/Yeek/Components/Pages/About/Privacy.razor
@@ -3,6 +3,12 @@
 
 <PageTitle>Yeek - Privacy Policy</PageTitle>
 
+<HeadContent>
+    <meta property="og:title" content="Yeek - Privacy Policy"/>
+    <meta property="og:description" content="Legal stuff. Pinky promise I don't sell your data."/>
+    <meta property="og:type" content="website"/>
+</HeadContent>
+
 <p><b>Updated At:</b> 23-09-2025 (DD-MM-YYYY)</p>
 
 <section>
