--- a/Yeek/Components/Pages/Home.razor
+++ b/Yeek/Components/Pages/Home.razor
@@ -5,6 +5,12 @@
 
 <PageTitle>Yeek - MIDI Sharing</PageTitle>
 
+<HeadContent>
+    <meta property="og:title" content="Yeek - MIDI Sharing"/>
+    <meta property="og:description" content="Hosting your MIDI files for all your Space Station needs."/>
+    <meta property="og:type" content="website"/>
+</HeadContent>
+
 <div class="search">
     <h4>Search</h4>
     <form id="mainsearch">
