fix: HeadContent overriding the main layout outlet.

--- a/Yeek/Components/Pages/About/About.razor
+++ b/Yeek/Components/Pages/About/About.razor
@@ -1,13 +1,14 @@
 ﻿@page "/about"
+@using Yeek.Components.Layout
 
 <h3>About</h3>
 <PageTitle>Yeek - About</PageTitle>
 
-<HeadContent>
+<OpenGraph>
     <meta property="og:title" content="Yeek - About"/>
     <meta property="og:description" content="Made by Simyon"/>
     <meta property="og:type" content="website"/>
-</HeadContent>
+</OpenGraph>
 
 Yeek is a Project by Simyon.
 
