--- a/Yeek/Components/Pages/Home.razor
+++ b/Yeek/Components/Pages/Home.razor
@@ -2,14 +2,15 @@
 @using System.Web
 @using Yeek.FileHosting.Model
 @using Yeek.FileHosting.Repositories
+@using Yeek.Components.Layout
 
 <PageTitle>Yeek - MIDI Sharing</PageTitle>
 
-<HeadContent>
+<OpenGraph>
     <meta property="og:title" content="Yeek - MIDI Sharing"/>
     <meta property="og:description" content="Hosting your MIDI files for all your Space Station needs."/>
     <meta property="og:type" content="website"/>
-</HeadContent>
+</OpenGraph>
 
 <div class="search">
     <h4>Search</h4>
