--- a/Yeek/Components/Layout/MainLayout.razor
+++ b/Yeek/Components/Layout/MainLayout.razor
@@ -1,6 +1,5 @@
 ﻿@using System.Globalization
 @using Microsoft.AspNetCore.Components.Authorization
-@using Microsoft.AspNetCore.Http.Extensions
 @using Microsoft.Extensions.Options
 @using Yeek.Configuration
 @using Yeek.Core.Models
@@ -12,13 +11,9 @@
 @using Yeek.Security.Repositories
 @inherits LayoutComponentBase
 
-@inject IHttpContextAccessor HttpContextAccessor
-
-<HeadContent>
-    <meta property="og:site_name" content="Yeek"/>
-    <meta name="theme-color" content="#9d32a8">
-    <meta property="og:url" content="@HttpContextAccessor.HttpContext!.Request.GetDisplayUrl()" />
-</HeadContent>
+<OpenGraph>
+    
+</OpenGraph>
 
 <header class="header">
     <a href="/">Yeek</a>
