--- a/Yeek/Components/Pages/About/FAQ.razor
+++ b/Yeek/Components/Pages/About/FAQ.razor
@@ -1,13 +1,14 @@
 ﻿@page "/faq"
+@using Yeek.Components.Layout
 <h3>FAQ</h3>
 
 <PageTitle>Yeek - FAQ</PageTitle>
 
-<HeadContent>
+<OpenGraph>
     <meta property="og:title" content="Yeek - FAQ"/>
     <meta property="og:description" content="Frequently asked questions. Did you know you can mount the entire archive as a network share?"/>
     <meta property="og:type" content="website"/>
-</HeadContent>
+</OpenGraph>
 
 <h4>How do I get all the MIDIs?</h4>
 <p>
