--- a/Yeek/Components/Pages/About/Privacy.razor
+++ b/Yeek/Components/Pages/About/Privacy.razor
@@ -1,13 +1,14 @@
 ﻿@page "/privacy"
+@using Yeek.Components.Layout
 <h3>Privacy Policy</h3>
 
 <PageTitle>Yeek - Privacy Policy</PageTitle>
 
-<HeadContent>
+<OpenGraph>
     <meta property="og:title" content="Yeek - Privacy Policy"/>
     <meta property="og:description" content="Legal stuff. Pinky promise I don't sell your data."/>
     <meta property="og:type" content="website"/>
-</HeadContent>
+</OpenGraph>
 
 <p><b>Updated At:</b> 23-09-2025 (DD-MM-YYYY)</p>
 
