feat: Locked files

--- a/Yeek/Components/Pages/About/FAQ.razor
+++ b/Yeek/Components/Pages/About/FAQ.razor
@@ -34,6 +34,11 @@
     Nope. No ads either. Never.
 </p>
 
+<h4>What is a "locked file"?</h4>
+<p>
+    Locked files are files that only trusted users can edit.
+</p>
+
 <h4>What are trust levels?</h4>
 <p>
     Trust levels are assigned to users based on their contributions. Currently, you are either: A normal user, a trusted user or a Moderator.<br/>
