feat: Add UserNametag component to signify trust level

--- a/Yeek/Components/Pages/Midi/Midi.razor
+++ b/Yeek/Components/Pages/Midi/Midi.razor
@@ -112,7 +112,7 @@
         @_file.MostRecentRevision.Description
     </p>
     <p class="midi-page-uploaded-by">
-        Uploaded by: @_uploadedBy.DisplayName
+        Uploaded by: <UserNametag User="_uploadedBy"/>
     </p>
 
     @if (_filePreview == null)
