feat: Add link to public page in Users page

--- a/Yeek/Components/Pages/Moderation/Users/Users.razor
+++ b/Yeek/Components/Pages/Moderation/Users/Users.razor
@@ -37,6 +37,7 @@
             <td>@user.LastLogin.ToString("F", CultureInfo.InvariantCulture)</td>
             <td>
                 <a href="/moderation/users/@user.Id">Visit</a>
+                <a href="/profile/@user.Id">Visit Public Page</a>
             </td>
         </tr>
     }
