fix: typo in faq, thanks Lucky.

--- a/Yeek/Components/Pages/About/FAQ.razor
+++ b/Yeek/Components/Pages/About/FAQ.razor
@@ -81,7 +81,7 @@
 
 <h4>My file was taken down, why?</h4>
 <p>
-    This is probably because you uploaded content that was copyrighted and a valid takedown reqeust was issued.
+    This is probably because you uploaded content that was copyrighted and a valid takedown request was issued.
 </p>
 
 <h4>How do votes work?</h4>
